--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 </head>
 <body>
-  <div class="banner">
+  <div class="banner crop">
     <div>
-      <img class="img img-flex" src="images/earth-horizon.jpg" alt="">
+      <img class="img-flex" src="images/earth-horizon.jpg" alt="">
     </div>
-    <div class="grid gutter-1-2 pad-t grid-middle">
+    <div class="grid gutter-1-2 pad-t grid-middle banner-content">
       <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
         <h1 class="yotta push-0 pad-b-1-2">The Planet Earth</h1>
         <p class="wrapper push-1-2">An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
       </div>
-      <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 pad-b">
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 pad-b button">
         <a class="btn btn-ghost bold" href="#">Book a star cruise</a>
       </div>
     </div>
